# advent-of-code-template

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-app.yml
aoc/: run.py
aoc/tests/: test_all.py
aoc/utils/: finder.py  helpers.py
python/: run.py
python/aoc_utils/: finder.py
python/common/: astar.py  point.py  priority_queue.py  range_map.py
python/tests/: test_all.py  test_astar.py  test_priority_queue.py  test_range_map.py
