[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = ""
authors = ["Roy Williams <rwilliams3@snapchat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.31.0"
types-requests = "^2.31.0.10"
immutables = "^0.20"
pyyaml = "^6.0.1"
ipython = "^8.18.1"
types-pyyaml = "^6.0.12.12"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"
mypy-extensions = "^1.0.0"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
