[project]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = [{name = "Roy Williams", email =  "roy.williams.iii@gmail.com"}]
readme = "README.md"
requires-python = ">= 3.12"

dependencies = [
    "anthropic>=0.40.0",
    "bs4>=0.0.2",
    "click",
    "immutables",
    "ipython",
    "mypy>=1.13.0",
    "pyyaml",
    "requests",
    "types-pyyaml",
    "types-requests",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]
